@@ -280,7 +280,9 @@
       <Command>xcopy "$(SolutionDir)addons/*.py" "$(OutDir)addons" /E /I /D /Y
 xcopy "$(SolutionDir)addons/*.json" "$(OutDir)addons" /E /I /D /Y
 xcopy "$(SolutionDir)cfg" "$(OutDir)cfg" /E /I /D /Y
-xcopy "$(SolutionDir)platforms" "$(OutDir)platforms" /E /I /D /Y</Command>
+xcopy "$(SolutionDir)platforms" "$(OutDir)platforms" /E /I /D /Y
+if exist "$(OutDir)platforms\unix32-unsigned.xml" del /q "$(OutDir)platforms\unix32-unsigned.xml"
+if exist "$(OutDir)platforms\unix64-unsigned.xml" del /q "$(OutDir)platforms\unix64-unsigned.xml"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug-PCRE|x64'">
@@ -313,7 +315,9 @@ xcopy "$(SolutionDir)platforms" "$(OutDir)platforms" /E /I /D /Y</Command>
       <Command>xcopy "$(SolutionDir)addons/*.py" "$(OutDir)addons" /E /I /D /Y
 xcopy "$(SolutionDir)addons/*.json" "$(OutDir)addons" /E /I /D /Y
 xcopy "$(SolutionDir)cfg" "$(OutDir)cfg" /E /I /D /Y
-xcopy "$(SolutionDir)platforms" "$(OutDir)platforms" /E /I /D /Y</Command>
+xcopy "$(SolutionDir)platforms" "$(OutDir)platforms" /E /I /D /Y
+if exist "$(OutDir)platforms\unix32-unsigned.xml" del /q "$(OutDir)platforms\unix32-unsigned.xml"
+if exist "$(OutDir)platforms\unix64-unsigned.xml" del /q "$(OutDir)platforms\unix64-unsigned.xml"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -354,7 +358,9 @@ xcopy "$(SolutionDir)platforms" "$(OutDir)platforms" /E /I /D /Y</Command>
       <Command>xcopy "$(SolutionDir)addons/*.py" "$(OutDir)addons" /E /I /D /Y
 xcopy "$(SolutionDir)addons/*.json" "$(OutDir)addons" /E /I /D /Y
 xcopy "$(SolutionDir)cfg" "$(OutDir)cfg" /E /I /D /Y
-xcopy "$(SolutionDir)platforms" "$(OutDir)platforms" /E /I /D /Y</Command>
+xcopy "$(SolutionDir)platforms" "$(OutDir)platforms" /E /I /D /Y
+if exist "$(OutDir)platforms\unix32-unsigned.xml" del /q "$(OutDir)platforms\unix32-unsigned.xml"
+if exist "$(OutDir)platforms\unix64-unsigned.xml" del /q "$(OutDir)platforms\unix64-unsigned.xml"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release-PCRE|x64'">
@@ -396,7 +402,9 @@ xcopy "$(SolutionDir)platforms" "$(OutDir)platforms" /E /I /D /Y</Command>
       <Command>xcopy "$(SolutionDir)addons/*.py" "$(OutDir)addons" /E /I /D /Y
 xcopy "$(SolutionDir)addons/*.json" "$(OutDir)addons" /E /I /D /Y
 xcopy "$(SolutionDir)cfg" "$(OutDir)cfg" /E /I /D /Y
-xcopy "$(SolutionDir)platforms" "$(OutDir)platforms" /E /I /D /Y</Command>
+xcopy "$(SolutionDir)platforms" "$(OutDir)platforms" /E /I /D /Y
+if exist "$(OutDir)platforms\unix32-unsigned.xml" del /q "$(OutDir)platforms\unix32-unsigned.xml"
+if exist "$(OutDir)platforms\unix64-unsigned.xml" del /q "$(OutDir)platforms\unix64-unsigned.xml"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
